tests/NormalTests/paczka1/small_fuzzy/48192609.err
Error in line 3: 0RqaB8 S874 73,5
Error in line 7: 710JmOd9Ze S874 81,1
